--- a/src/ravenwm/Cargo.toml
+++ b/src/ravenwm/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ravenwm_core = { path = "../ravenwm_core" }
 xcb = "0.10"
