--- a/src/ravenwm_core/Cargo.toml
+++ b/src/ravenwm_core/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "ravenc"
+name = "ravenwm_core"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ravenwm_core = { path = "../ravenwm_core" }
+bincode = "1.3"
+serde = { version = "1.0", features = [ "derive" ] }
