--- a/src/ravenc/Cargo.toml
+++ b/src/ravenc/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 paw = "1.0"
+hex_color = "1.0"
 ravenwm_core = { path = "../ravenwm_core" }
 structopt = { version = "0.3", features = [ "paw" ] }
