--- a/src/ravenwm_core/Cargo.toml
+++ b/src/ravenwm_core/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 bincode = "1.3"
+hex_color = { version = "1.0", features = [ "serde" ] }
 serde = { version = "1.0", features = [ "derive" ] }
