--- a/src/ravenwm/Cargo.toml
+++ b/src/ravenwm/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = "1.10"
+futures = "0.3"
 ravenwm_core = { path = "../ravenwm_core" }
 xcb = "0.10"
